// SPDX-FileCopyrightText: Copyright © 2025 Serpent OS Developers
// SPDX-FileCopyrightText: Copyright © 2025 AerynOS Developers
//
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package lichen.system;

import "osinfo.proto";
import "google/protobuf/empty.proto";

service System {
    rpc Status(SystemStatusRequest) returns (SystemStatusResponse) {}
    rpc Shutdown(SystemShutdownRequest) returns (SystemShutdownResponse) {}
    rpc GetOSInfo(google.protobuf.Empty) returns (lichen.osinfo.OSInfo) {}
}

message SystemStatusRequest {
}

message SystemStatusResponse {
    // System uptime in seconds
    uint64 uptime = 1;
}

message SystemShutdownRequest {
}

message SystemShutdownResponse {
    // True if the system is shutting down
    bool shutting_down = 1;
}
